--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ gunicorn==19.4.5
 psycopg2==2.6.1
 whitenoise==2.0.6
 python-levenshtein==0.12.0
+nltk==3.1
+stemming.porter2==1.0.1
+sklearn==0.0
+numpy==1.10.4
