--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ psycopg2==2.6.1
 whitenoise==2.0.6
 python-levenshtein==0.12.0
 nltk==3.1
-stemming.porter2==1.0.1
+stemming==1.0.1
 sklearn==0.0
 numpy==1.10.4
